--- a/QiQiBot/appsettings.json
+++ b/QiQiBot/appsettings.json
@@ -1,8 +1,11 @@
 ﻿{
 	"Logging": {
 		"LogLevel": {
-			"Default": "Information"
+			"Default": "Information",
+			"Microsoft": "Warning",
+			"Microsoft.Hosting.Lifetime": "Warning",
+			"Microsoft.EntityFrameworkCore.Database.Command": "Warning"
 		}
 	},
-	"DBConnectionString": "Server=localhost;Port=5432;Database=QiQiBot;User Id=postgres;Password=postgres;",
+	"DBConnectionString": "Server=localhost;Port=5432;Database=QiQiBot;User Id=postgres;Password=postgres;"
 }
