Reduce logging for httpclient

--- a/QiQiBot/appsettings.json
+++ b/QiQiBot/appsettings.json
@@ -4,7 +4,8 @@
 			"Default": "Information",
 			"Microsoft": "Warning",
 			"Microsoft.Hosting.Lifetime": "Warning",
-			"Microsoft.EntityFrameworkCore.Database.Command": "Warning"
+			"Microsoft.EntityFrameworkCore.Database.Command": "Warning",
+			"System.Net.Http.HttpClient": "Warning"
 		}
 	},
 	"DBConnectionString": "Server=localhost;Port=5432;Database=QiQiBot;User Id=postgres;Password=postgres;"
